fix: fix overflow issue

--- a/youtube-client/src/js/App.scss
+++ b/youtube-client/src/js/App.scss
@@ -14,4 +14,5 @@ html, body {
   justify-content: space-between;
   align-items: center;
   height: 100%;
+  overflow: hidden;
 }
